--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "got": "^11.3.0",
